domain name change

--- a/contact.html
+++ b/contact.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Contact Us — EmailValidator</title>
-  <meta name="description" content="Get in touch with EmailValidator support team. We're here to help with your email validation needs, technical questions, and custom solutions.">
+  <title>Contact Us — BounceFree</title>
+  <meta name="description" content="Get in touch with BounceFree support team. We're here to help with your email validation needs, technical questions, and custom solutions.">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
@@ -15,7 +15,7 @@
   <!-- Navbar -->
   <nav class="navbar fixed top-0 w-full z-20" id="navbar">
     <div class="max-w-7xl mx-auto px-6 py-4 flex items-center justify-between">
-      <a href="index.html" class="text-2xl font-bold text-gradient">EmailValidator</a>
+      <a href="index.html" class="text-2xl font-bold text-gradient">BounceFree</a>
       <div class="space-x-8 hidden md:flex">
         <a href="index.html" class="nav-link text-gray-700 hover:text-indigo-600">Home</a>
         <a href="about.html" class="nav-link text-gray-700 hover:text-indigo-600">About</a>
@@ -119,7 +119,7 @@
                 </div>
                 <div>
                   <h3 class="font-semibold text-lg">Email Support</h3>
-                  <p class="text-gray-600">support@emailvalidator.com</p>
+                  <p class="text-gray-600">support@BounceFree.com</p>
                   <p class="text-sm text-gray-500">We respond within 2 hours</p>
                 </div>
               </div>
@@ -221,7 +221,7 @@
     <div class="max-w-7xl mx-auto px-6">
       <div class="grid md:grid-cols-4 gap-8 mb-12">
         <div class="md:col-span-2">
-          <a href="index.html" class="text-2xl font-bold text-white mb-4 block">EmailValidator</a>
+          <a href="index.html" class="text-2xl font-bold text-white mb-4 block">BounceFree</a>
           <p class="text-gray-400 mb-6 max-w-md">
             Professional email validation service trusted by thousands of businesses worldwide. 
             Verify, clean, and validate email addresses with confidence.
@@ -264,7 +264,7 @@
         </div>
       </div>
       <div class="border-t border-gray-800 pt-8 text-center">
-        <p class="text-gray-400">© 2025 EmailValidator. All rights reserved.</p>
+        <p class="text-gray-400">© 2025 BounceFree. All rights reserved.</p>
       </div>
     </div>
   </footer>
