--- a/about.html
+++ b/about.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>About Us — EmailValidator</title>
-  <meta name="description" content="Learn about EmailValidator's mission to improve email deliverability. Discover our story, team, and commitment to helping businesses validate emails effectively.">
+  <title>About Us — BounceFree</title>
+  <meta name="description" content="Learn about BounceFree's mission to improve email deliverability. Discover our story, team, and commitment to helping businesses validate emails effectively.">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
@@ -15,7 +15,7 @@
   <!-- Navbar -->
   <nav class="navbar fixed top-0 w-full z-20" id="navbar">
     <div class="max-w-7xl mx-auto px-6 py-4 flex items-center justify-between">
-      <a href="index.html" class="text-2xl font-bold text-gradient">EmailValidator</a>
+      <a href="index.html" class="text-2xl font-bold text-gradient">BounceFree</a>
       <div class="space-x-8 hidden md:flex">
         <a href="index.html" class="nav-link text-gray-700 hover:text-indigo-600">Home</a>
         <a href="about.html" class="nav-link text-indigo-600 font-semibold">About</a>
@@ -42,7 +42,7 @@
     <!-- Hero Section -->
     <section class="hero text-white py-20">
       <div class="hero-content max-w-6xl mx-auto px-6 text-center">
-        <h1 class="text-5xl font-bold mb-6 gradient-text">About EmailValidator</h1>
+        <h1 class="text-5xl font-bold mb-6 gradient-text">About BounceFree</h1>
         <p class="text-xl text-gray-200 max-w-3xl mx-auto">
           We're on a mission to solve email deliverability challenges and help businesses 
           maintain clean, effective email lists that drive real results.
@@ -57,7 +57,7 @@
           <div>
             <h2 class="text-4xl font-bold mb-6">Our Story</h2>
             <p class="text-lg text-gray-600 mb-6">
-              EmailValidator was born from a simple observation: too many businesses were struggling 
+              BounceFree was born from a simple observation: too many businesses were struggling 
               with email deliverability issues that were hurting their bottom line. Bounce rates were 
               high, sender reputations were damaged, and marketing campaigns were failing.
             </p>
@@ -140,7 +140,7 @@
       <div class="max-w-6xl mx-auto">
         <div class="text-center mb-16">
           <h2 class="text-4xl font-bold mb-4">Meet Our Team</h2>
-          <p class="text-xl text-gray-600">The passionate people behind EmailValidator</p>
+          <p class="text-xl text-gray-600">The passionate people behind BounceFree</p>
         </div>
         <div class="grid md:grid-cols-3 gap-8">
           <div class="text-center">
@@ -240,7 +240,7 @@
       <div class="max-w-4xl mx-auto text-center">
         <h2 class="text-4xl font-bold text-white mb-6">Ready to Improve Your Email Deliverability?</h2>
         <p class="text-xl text-indigo-100 mb-8">
-          Join thousands of businesses that trust EmailValidator for their email validation needs.
+          Join thousands of businesses that trust BounceFree for their email validation needs.
         </p>
         <div class="flex flex-col sm:flex-row gap-4 justify-center">
           <a href="index.html#demo" class="btn btn-primary bg-white text-indigo-600 hover:bg-gray-100">
@@ -259,7 +259,7 @@
     <div class="max-w-7xl mx-auto px-6">
       <div class="grid md:grid-cols-4 gap-8 mb-12">
         <div class="md:col-span-2">
-          <a href="index.html" class="text-2xl font-bold text-white mb-4 block">EmailValidator</a>
+          <a href="index.html" class="text-2xl font-bold text-white mb-4 block">BounceFree</a>
           <p class="text-gray-400 mb-6 max-w-md">
             Professional email validation service trusted by thousands of businesses worldwide. 
             Verify, clean, and validate email addresses with confidence.
@@ -302,7 +302,7 @@
         </div>
       </div>
       <div class="border-t border-gray-800 pt-8 text-center">
-        <p class="text-gray-400">© 2025 EmailValidator. All rights reserved.</p>
+        <p class="text-gray-400">© 2025 BounceFree. All rights reserved.</p>
       </div>
     </div>
   </footer>
