--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>EmailValidator — Verify & Clean Your Emails</title>
+  <title>BounceFree — Verify & Clean Your Emails</title>
   <meta name="description" content="Professional email validation service with real-time verification, bulk list cleanup, and API integration. Reduce bounce rates and improve deliverability.">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,7 +15,7 @@
   <!-- Navbar -->
   <nav class="navbar fixed top-0 w-full z-20" id="navbar">
     <div class="max-w-7xl mx-auto px-6 py-4 flex items-center justify-between">
-      <a href="/" class="text-2xl font-bold text-gradient">EmailValidator</a>
+      <a href="/" class="text-2xl font-bold text-gradient">BounceFree</a>
       <div class="space-x-8 hidden md:flex">
         <a href="index.html" class="nav-link text-gray-700 hover:text-indigo-600">Home</a>
         <a href="about.html" class="nav-link text-gray-700 hover:text-indigo-600">About</a>
@@ -405,7 +405,7 @@
     <div class="max-w-7xl mx-auto px-6">
       <div class="grid md:grid-cols-4 gap-8 mb-12">
         <div class="md:col-span-2">
-          <a href="/" class="text-2xl font-bold text-white mb-4 block">EmailValidator</a>
+          <a href="/" class="text-2xl font-bold text-white mb-4 block">BounceFree</a>
           <p class="text-gray-400 mb-6 max-w-md">
             Professional email validation service trusted by thousands of businesses worldwide. 
             Verify, clean, and validate email addresses with confidence.
@@ -448,7 +448,7 @@
         </div>
       </div>
       <div class="border-t border-gray-800 pt-8 text-center">
-        <p class="text-gray-400">© 2025 EmailValidator. All rights reserved.</p>
+        <p class="text-gray-400">© 2025 BounceFree. All rights reserved.</p>
       </div>
     </div>
   </footer>
