--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>BounceFree — Verify & Clean Your Emails</title>
   <meta name="description" content="Professional email validation service with real-time verification, bulk list cleanup, and API integration. Reduce bounce rates and improve deliverability.">
+  <link rel="icon" type="image/png" href="assets/images/bounce_free_icon.png" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
