--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>About Us — BounceFree</title>
   <meta name="description" content="Learn about BounceFree's mission to improve email deliverability. Discover our story, team, and commitment to helping businesses validate emails effectively.">
+  <link rel="icon" type="image/png" href="assets/images/bounce_free_icon.png" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
